--- a/laravel/.env.local
+++ b/laravel/.env.local
@@ -2,17 +2,17 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=okojo_gm
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=okojo-gm
+DB_USERNAME=user
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
