Add composer.json ・autoloadの追加

--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -37,6 +37,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "OkojoBot\\": "okojo/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
