--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
         php artisan migrate
         php artisan db:seed
         npm install
+        npm run dev
         php artisan serve --host 0.0.0.0
       '
 
