--- a/laravel/package.json
+++ b/laravel/package.json
@@ -12,19 +12,22 @@
     "devDependencies": {
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
+        "deepmerge": "^2.2.1",
+        "fibers": "^5.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
+        "sass": "^1.32.8",
+        "sass-loader": "^8.0.2",
         "vue": "^2.5.17",
         "vue-loader": "^15.9.6",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vuetify": "^2.4.6",
         "webpack": "^5.26.0"
     }
 }
